bindings/swift/Sources/CProven/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

typedef enum ProvenStatus {
    PROVEN_OK = 0,
    PROVEN_ERR_NULL_POINTER = -1,
    PROVEN_ERR_INVALID_ARGUMENT = -2,
    PROVEN_ERR_OVERFLOW = -3,
    PROVEN_ERR_UNDERFLOW = -4,
    PROVEN_ERR_DIVISION_BY_ZERO = -5,
    PROVEN_ERR_PARSE_FAILURE = -6,
    PROVEN_ERR_VALIDATION_FAILED = -7,
    PROVEN_ERR_OUT_OF_BOUNDS = -8,
    PROVEN_ERR_ENCODING_ERROR = -9,
    PROVEN_ERR_ALLOCATION_FAILED = -10,
    PROVEN_ERR_NOT_IMPLEMENTED = -99
} ProvenStatus;
/* ============================================================================
 * Result Types
 * ============================================================================ */

typedef struct ProvenIntResult {
    ProvenStatus status;
    int64_t value;
} ProvenIntResult;
typedef struct ProvenBoolResult {
    ProvenStatus status;
    bool value;
} ProvenBoolResult;
typedef struct ProvenStringResult {
    ProvenStatus status;
    char* value;
    size_t length;
} ProvenStringResult;
typedef struct ProvenFloatResult {
    ProvenStatus status;
    double value;
} ProvenFloatResult;
/* ============================================================================
 * Runtime Management
 * ============================================================================ */

int32_t proven_init(void);
void proven_deinit(void);
bool proven_is_initialized(void);
uint32_t proven_ffi_abi_version(void);
/* ============================================================================
 * Memory Management
 * ============================================================================ */

void proven_free_string(char* ptr);
/* ============================================================================
 * SafeMath
 * ============================================================================ */

ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_abs_safe(int64_t n);
int64_t proven_math_clamp(int64_t lo, int64_t hi, int64_t value);
ProvenIntResult proven_math_pow_checked(int64_t base, uint32_t exp);
/* ============================================================================
 * SafeString
 * ============================================================================ */

ProvenBoolResult proven_string_is_valid_utf8(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_sql(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_html(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_js(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafePath
 * ============================================================================ */

ProvenBoolResult proven_path_has_traversal(const uint8_t* ptr, size_t len);
ProvenStringResult proven_path_sanitize_filename(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeCrypto
 * ============================================================================ */

ProvenBoolResult proven_crypto_constant_time_eq(
    const uint8_t* ptr1, size_t len1,
    const uint8_t* ptr2, size_t len2
);
ProvenStatus proven_crypto_random_bytes(uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeEmail
 * ============================================================================ */

ProvenBoolResult proven_email_is_valid(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeNetwork
 * ============================================================================ */

typedef struct ProvenIPv4Address {
    uint8_t octets[4];
} ProvenIPv4Address;
typedef struct ProvenIPv4Result {
    ProvenStatus status;
    ProvenIPv4Address address;
} ProvenIPv4Result;
ProvenIPv4Result proven_network_parse_ipv4(const uint8_t* ptr, size_t len);
bool proven_network_ipv4_is_private(ProvenIPv4Address addr);
bool proven_network_ipv4_is_loopback(ProvenIPv4Address addr);
/* ============================================================================
 * SafeFloat
 * ============================================================================ */

ProvenFloatResult proven_float_div(double a, double b);
bool proven_float_is_finite(double x);
bool proven_float_is_nan(double x);
ProvenFloatResult proven_float_sqrt(double x);
ProvenFloatResult proven_float_ln(double x);
ProvenBoolResult proven_json_is_valid(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeDatetime
 * ============================================================================ */

typedef struct ProvenDateTime {
    int32_t year;
    uint8_t month;
    uint8_t day;
    uint8_t hour;
    uint8_t minute;
    uint8_t second;
    uint32_t nanosecond;
    int16_t tz_offset_minutes;
} ProvenDateTime;
typedef struct ProvenDateTimeResult {
    ProvenStatus status;
    ProvenDateTime datetime;
} ProvenDateTimeResult;
ProvenDateTimeResult proven_datetime_parse(const uint8_t* ptr, size_t len);
ProvenStringResult proven_datetime_format_iso8601(ProvenDateTime dt);
bool proven_datetime_is_leap_year(int32_t year);
uint8_t proven_datetime_days_in_month(int32_t year, uint8_t month);
/* ============================================================================
 * SafeVersion
 * ============================================================================ */

typedef struct ProvenSemanticVersion {
    uint32_t major;
    uint32_t minor;
    uint32_t patch;
    size_t prerelease_len;
    char* prerelease;
} ProvenSemanticVersion;
typedef struct ProvenVersionResult {
    ProvenStatus status;
    ProvenSemanticVersion version;
} ProvenVersionResult;
ProvenVersionResult proven_version_parse(const uint8_t* ptr, size_t len);
int32_t proven_version_compare(ProvenSemanticVersion a, ProvenSemanticVersion b);
void proven_version_free(ProvenSemanticVersion* version);
/* ============================================================================
 * SafeAngle
 * ============================================================================ */

double proven_angle_deg_to_rad(double degrees);
double proven_angle_rad_to_deg(double radians);
double proven_angle_normalize_degrees(double degrees);
double proven_angle_normalize_radians(double radians);
/* ============================================================================
 * SafeColor
 * ============================================================================ */

typedef struct ProvenRGBColor {
    uint8_t r;
    uint8_t g;
    uint8_t b;
} ProvenRGBColor;
typedef struct ProvenHSLColor {
    double h;
    double s;
    double l;
} ProvenHSLColor;
typedef struct ProvenColorResult {
    ProvenStatus status;
    ProvenRGBColor color;
} ProvenColorResult;
ProvenColorResult proven_color_parse_hex(const uint8_t* ptr, size_t len);
ProvenHSLColor proven_color_rgb_to_hsl(ProvenRGBColor rgb);
ProvenStringResult proven_color_to_hex(ProvenRGBColor rgb);
/* ============================================================================
 * SafeUnit
 * ============================================================================ */

typedef enum ProvenLengthUnit {
    PROVEN_LENGTH_METERS = 0,
    PROVEN_LENGTH_KILOMETERS = 1,
    PROVEN_LENGTH_CENTIMETERS = 2,
    PROVEN_LENGTH_MILLIMETERS = 3,
    PROVEN_LENGTH_FEET = 4,
    PROVEN_LENGTH_INCHES = 5,
    PROVEN_LENGTH_MILES = 6,
    PROVEN_LENGTH_YARDS = 7
} ProvenLengthUnit;
typedef enum ProvenTempUnit {
    PROVEN_TEMP_CELSIUS = 0,
    PROVEN_TEMP_FAHRENHEIT = 1,
    PROVEN_TEMP_KELVIN = 2
} ProvenTempUnit;
ProvenFloatResult proven_unit_convert_length(double value, ProvenLengthUnit from, ProvenLengthUnit to);
ProvenFloatResult proven_unit_convert_temp(double value, ProvenTempUnit from, ProvenTempUnit to);
/* ============================================================================
 * SafeHex (FFI-level: proven_hex_encode / proven_hex_decode)
 * ============================================================================ */

ProvenStringResult proven_hex_encode(const uint8_t* ptr, size_t len, bool uppercase);
typedef struct ProvenHexDecodeResult {
    ProvenStatus status;
    uint8_t* data;
    size_t length;
} ProvenHexDecodeResult;
ProvenHexDecodeResult proven_hex_decode(const uint8_t* ptr, size_t len);
void proven_hex_free(ProvenHexDecodeResult* result);
/* ============================================================================
 * SafeUUID (FFI-level: proven_uuid_*)
 * ============================================================================ */

typedef struct ProvenUUID {
    uint8_t bytes[16];
} ProvenUUID;
typedef struct ProvenUUIDResult {
    ProvenStatus status;
    ProvenUUID uuid;
} ProvenUUIDResult;
ProvenUUIDResult proven_uuid_v4(void);
ProvenStringResult proven_uuid_to_string(ProvenUUID uuid);
ProvenUUIDResult proven_uuid_parse(const uint8_t* ptr, size_t len);
bool proven_uuid_is_nil(ProvenUUID uuid);
uint8_t proven_uuid_version(ProvenUUID uuid);
/* ============================================================================
 * SafeCurrency (FFI-level: proven_currency_*)
 * ============================================================================ */

typedef struct ProvenCurrencyResult {
    ProvenStatus status;
    int64_t amount_minor;
    uint8_t code[3];
    uint8_t decimal_places;
} ProvenCurrencyResult;
ProvenCurrencyResult proven_currency_parse(const uint8_t* ptr, size_t len);