bindings/arduino/Proven.h

// ============================================================================
// MODULE 6: SafeNetwork - Core (6/11)
// ============================================================================

/**
 * @brief IPv4 address structure
 */
struct IPv4Address {
    uint8_t octets[4];
    bool valid;
};
// ============================================================================
// MODULE 8: SafeUUID - Core (8/11)
// ============================================================================

/**
 * @brief UUID structure (16 bytes)
 */
struct UUID {
    uint8_t bytes[16];
};
// ============================================================================
// MODULE 12: SafeJson - Data (1/7)
// ============================================================================

/**
 * @brief JSON value type
 */
enum class JsonType : uint8_t {
    Null = 0,
    Bool,
    Number,
    String,
    Array,
    Object,
    Invalid = 0xFF
};