bindings/dart/lib/src/ffi.dart


// --- SafeEmail ---
typedef ProvenEmailIsValidDart = BoolResult Function(Pointer<Uint8>, int);

// --- SafeNetwork ---
typedef ProvenNetworkParseIPv4Dart = IPv4Result Function(
    Pointer<Uint8>, int);
typedef ProvenNetworkIPv4IsPrivateDart = bool Function(IPv4Address);
typedef ProvenNetworkIPv4IsLoopbackDart = bool Function(IPv4Address);

// --- SafeFloat ---
typedef ProvenFloatDivDart = FloatResult Function(double, double);
typedef ProvenFloatIsFiniteDart = bool Function(double);
typedef ProvenFloatIsNanDart = bool Function(double);
typedef ProvenFloatSqrtDart = FloatResult Function(double);
typedef ProvenFloatLnDart = FloatResult Function(double);

// --- SafeHex ---
typedef ProvenHexEncodeDart = StringResult Function(Pointer<Uint8>, int, bool);
typedef ProvenHexDecodeDart = HexDecodeResult Function(Pointer<Uint8>, int);
typedef ProvenHexFreeDart = void Function(Pointer<HexDecodeResult>);

// --- SafeUUID ---
typedef ProvenUuidV4Dart = UUIDResult Function();
typedef ProvenUuidToStringDart = StringResult Function(UUID);
typedef ProvenUuidParseDart = UUIDResult Function(Pointer<Uint8>, int);
typedef ProvenUuidIsNilDart = bool Function(UUID);
typedef ProvenUuidVersionDart = int Function(UUID);

// --- SafeJson ---
typedef ProvenJsonIsValidDart = BoolResult Function(Pointer<Uint8>, int);

// --- SafeColor ---
typedef ProvenColorParseHexDart = ColorParseResult Function(
    Pointer<Uint8>, int);
typedef ProvenColorRgbToHslDart = HSLColor Function(RGBColor);
typedef ProvenColorToHexDart = StringResult Function(RGBColor);

// --- SafeAngle ---
typedef ProvenAngleDegToRadDart = double Function(double);
typedef ProvenAngleRadToDegDart = double Function(double);
typedef ProvenAngleNormalizeDegreesDart = double Function(double);
typedef ProvenAngleNormalizeRadiansDart = double Function(double);

// --- SafeUnit ---
typedef ProvenUnitConvertLengthDart = FloatResult Function(double, int, int);
typedef ProvenUnitConvertTempDart = FloatResult Function(double, int, int);

// --- SafeVersion ---
typedef ProvenVersionParseDart = VersionResult Function(Pointer<Uint8>, int);
typedef ProvenVersionCompareDart = int Function(
    CSemanticVersion, CSemanticVersion);
typedef ProvenVersionFreeDart = void Function(Pointer<CSemanticVersion>);

// --- SafeDateTime ---
typedef ProvenDatetimeParseDart = DateTimeResult Function(
    Pointer<Uint8>, int);
typedef ProvenDatetimeFormatIso8601Dart = StringResult Function(CDateTime);
typedef ProvenDatetimeIsLeapYearDart = bool Function(int);
typedef ProvenDatetimeDaysInMonthDart = int Function(int, int);

// --- SafeCurrency ---
typedef ProvenCurrencyParseDart = CCurrencyResult Function(
    Pointer<Uint8>, int);
typedef ProvenCurrencyFormatDart = StringResult Function(
    int, Array<Uint8>, int);

// --- SafePhone ---
typedef ProvenPhoneParseDart = CPhoneResult Function(Pointer<Uint8>, int);
typedef ProvenPhoneFormatE164Dart = StringResult Function(int, int);

// ============================================================================
// Library loader
// ============================================================================

/// Load the libproven shared library for the current platform.
DynamicLibrary _loadLibrary() {
  if (Platform.isLinux) return DynamicLibrary.open('libproven.so');
  if (Platform.isMacOS) return DynamicLibrary.open('libproven.dylib');
  if (Platform.isWindows) return DynamicLibrary.open('proven.dll');
  throw UnsupportedError('Unsupported platform: ${Platform.operatingSystem}');
}

/// The loaded libproven shared library.
final DynamicLibrary provenLib = _loadLibrary();

// ============================================================================
// Bound functions
// ============================================================================

// --- Lifecycle ---
final provenInit =
    provenLib.lookupFunction<ProvenInitC, ProvenInitDart>('proven_init');
final provenDeinit =
    provenLib.lookupFunction<ProvenDeinitC, ProvenDeinitDart>('proven_deinit');
final provenIsInitialized =
    provenLib.lookupFunction<ProvenIsInitializedC, ProvenIsInitializedDart>(
        'proven_is_initialized');
final provenAbiVersion =
    provenLib.lookupFunction<ProvenAbiVersionC, ProvenAbiVersionDart>(
        'proven_ffi_abi_version');

// --- String management ---
final provenFreeString =
    provenLib.lookupFunction<ProvenFreeStringC, ProvenFreeStringDart>(
        'proven_free_string');

// --- SafeMath ---
final provenMathDiv =
    provenLib.lookupFunction<ProvenMathDivC, ProvenMathDivDart>(
        'proven_math_div');
final provenMathMod =
    provenLib.lookupFunction<ProvenMathModC, ProvenMathModDart>(
        'proven_math_mod');
final provenMathAddChecked =
    provenLib.lookupFunction<ProvenMathAddCheckedC, ProvenMathAddCheckedDart>(
        'proven_math_add_checked');
final provenMathSubChecked =
    provenLib.lookupFunction<ProvenMathSubCheckedC, ProvenMathSubCheckedDart>(
        'proven_math_sub_checked');
final provenMathMulChecked =
    provenLib.lookupFunction<ProvenMathMulCheckedC, ProvenMathMulCheckedDart>(
        'proven_math_mul_checked');
final provenMathAbsSafe =
    provenLib.lookupFunction<ProvenMathAbsSafeC, ProvenMathAbsSafeDart>(
        'proven_math_abs_safe');
final provenMathClamp =
    provenLib.lookupFunction<ProvenMathClampC, ProvenMathClampDart>(
        'proven_math_clamp');
final provenMathPowChecked =
    provenLib.lookupFunction<ProvenMathPowCheckedC, ProvenMathPowCheckedDart>(
        'proven_math_pow_checked');

// --- SafeString ---
final provenStringIsValidUtf8 = provenLib
    .lookupFunction<ProvenStringIsValidUtf8C, ProvenStringIsValidUtf8Dart>(
        'proven_string_is_valid_utf8');
final provenStringEscapeSql = provenLib
    .lookupFunction<ProvenStringEscapeSqlC, ProvenStringEscapeSqlDart>(
        'proven_string_escape_sql');
final provenStringEscapeHtml = provenLib
    .lookupFunction<ProvenStringEscapeHtmlC, ProvenStringEscapeHtmlDart>(
        'proven_string_escape_html');
final provenStringEscapeJs =
    provenLib.lookupFunction<ProvenStringEscapeJsC, ProvenStringEscapeJsDart>(
        'proven_string_escape_js');

// --- SafePath ---
final provenPathHasTraversal = provenLib
    .lookupFunction<ProvenPathHasTraversalC, ProvenPathHasTraversalDart>(
        'proven_path_has_traversal');
final provenPathSanitizeFilename = provenLib.lookupFunction<
    ProvenPathSanitizeFilenameC,
    ProvenPathSanitizeFilenameDart>('proven_path_sanitize_filename');

// --- SafeCrypto ---
final provenCryptoConstantTimeEq = provenLib.lookupFunction<
    ProvenCryptoConstantTimeEqC,
    ProvenCryptoConstantTimeEqDart>('proven_crypto_constant_time_eq');
final provenCryptoRandomBytes = provenLib.lookupFunction<
    ProvenCryptoRandomBytesC,
    ProvenCryptoRandomBytesDart>('proven_crypto_random_bytes');

// --- SafeEmail ---
final provenEmailIsValid =
    provenLib.lookupFunction<ProvenEmailIsValidC, ProvenEmailIsValidDart>(
        'proven_email_is_valid');

// --- SafeNetwork ---
final provenNetworkParseIPv4 = provenLib
    .lookupFunction<ProvenNetworkParseIPv4C, ProvenNetworkParseIPv4Dart>(
        'proven_network_parse_ipv4');
final provenNetworkIPv4IsPrivate = provenLib.lookupFunction<
    ProvenNetworkIPv4IsPrivateC,
    ProvenNetworkIPv4IsPrivateDart>('proven_network_ipv4_is_private');
final provenNetworkIPv4IsLoopback = provenLib.lookupFunction<
    ProvenNetworkIPv4IsLoopbackC,
    ProvenNetworkIPv4IsLoopbackDart>('proven_network_ipv4_is_loopback');

// --- SafeFloat ---
final provenFloatDiv =
    provenLib.lookupFunction<ProvenFloatDivC, ProvenFloatDivDart>(
        'proven_float_div');
final provenFloatIsFinite =
    provenLib.lookupFunction<ProvenFloatIsFiniteC, ProvenFloatIsFiniteDart>(
        'proven_float_is_finite');
final provenFloatIsNan =
    provenLib.lookupFunction<ProvenFloatIsNanC, ProvenFloatIsNanDart>(
        'proven_float_is_nan');
final provenFloatSqrt =
    provenLib.lookupFunction<ProvenFloatSqrtC, ProvenFloatSqrtDart>(
        'proven_float_sqrt');
final provenFloatLn =
    provenLib.lookupFunction<ProvenFloatLnC, ProvenFloatLnDart>(
        'proven_float_ln');

// --- SafeHex ---
final provenHexEncode =
    provenLib.lookupFunction<ProvenHexEncodeC, ProvenHexEncodeDart>(
        'proven_hex_encode');
final provenHexDecode =
    provenLib.lookupFunction<ProvenHexDecodeC, ProvenHexDecodeDart>(
        'proven_hex_decode');
final provenHexFree =
    provenLib.lookupFunction<ProvenHexFreeC, ProvenHexFreeDart>(
        'proven_hex_free');

// --- SafeUUID ---
final provenUuidV4 =
    provenLib.lookupFunction<ProvenUuidV4C, ProvenUuidV4Dart>('proven_uuid_v4');
final provenUuidToString =
    provenLib.lookupFunction<ProvenUuidToStringC, ProvenUuidToStringDart>(
        'proven_uuid_to_string');
final provenUuidParse =
    provenLib.lookupFunction<ProvenUuidParseC, ProvenUuidParseDart>(
        'proven_uuid_parse');
final provenUuidIsNil =
    provenLib.lookupFunction<ProvenUuidIsNilC, ProvenUuidIsNilDart>(
        'proven_uuid_is_nil');
final provenUuidVersion =
    provenLib.lookupFunction<ProvenUuidVersionC, ProvenUuidVersionDart>(
        'proven_uuid_version');

// --- SafeJson ---
final provenJsonIsValid =
    provenLib.lookupFunction<ProvenJsonIsValidC, ProvenJsonIsValidDart>(
        'proven_json_is_valid');

// --- SafeColor ---
final provenColorParseHex =
    provenLib.lookupFunction<ProvenColorParseHexC, ProvenColorParseHexDart>(
        'proven_color_parse_hex');
final provenColorRgbToHsl =
    provenLib.lookupFunction<ProvenColorRgbToHslC, ProvenColorRgbToHslDart>(
        'proven_color_rgb_to_hsl');
final provenColorToHex =
    provenLib.lookupFunction<ProvenColorToHexC, ProvenColorToHexDart>(
        'proven_color_to_hex');

// --- SafeAngle ---
final provenAngleDegToRad =
    provenLib.lookupFunction<ProvenAngleDegToRadC, ProvenAngleDegToRadDart>(
        'proven_angle_deg_to_rad');
final provenAngleRadToDeg =
    provenLib.lookupFunction<ProvenAngleRadToDegC, ProvenAngleRadToDegDart>(
        'proven_angle_rad_to_deg');
final provenAngleNormalizeDegrees = provenLib.lookupFunction<
    ProvenAngleNormalizeDegreesC,
    ProvenAngleNormalizeDegreesDart>('proven_angle_normalize_degrees');
final provenAngleNormalizeRadians = provenLib.lookupFunction<
    ProvenAngleNormalizeRadiansC,
    ProvenAngleNormalizeRadiansDart>('proven_angle_normalize_radians');

// --- SafeUnit ---
final provenUnitConvertLength = provenLib
    .lookupFunction<ProvenUnitConvertLengthC, ProvenUnitConvertLengthDart>(
        'proven_unit_convert_length');
final provenUnitConvertTemp =
    provenLib.lookupFunction<ProvenUnitConvertTempC, ProvenUnitConvertTempDart>(
        'proven_unit_convert_temp');

// --- SafeVersion ---
final provenVersionParse =
    provenLib.lookupFunction<ProvenVersionParseC, ProvenVersionParseDart>(
        'proven_version_parse');
final provenVersionCompare =
    provenLib.lookupFunction<ProvenVersionCompareC, ProvenVersionCompareDart>(
        'proven_version_compare');
final provenVersionFree =
    provenLib.lookupFunction<ProvenVersionFreeC, ProvenVersionFreeDart>(
        'proven_version_free');

// --- SafeDateTime ---
final provenDatetimeParse =
    provenLib.lookupFunction<ProvenDatetimeParseC, ProvenDatetimeParseDart>(
        'proven_datetime_parse');
final provenDatetimeFormatIso8601 = provenLib.lookupFunction<
    ProvenDatetimeFormatIso8601C,
    ProvenDatetimeFormatIso8601Dart>('proven_datetime_format_iso8601');
final provenDatetimeIsLeapYear = provenLib.lookupFunction<
    ProvenDatetimeIsLeapYearC,
    ProvenDatetimeIsLeapYearDart>('proven_datetime_is_leap_year');
final provenDatetimeDaysInMonth = provenLib.lookupFunction<
    ProvenDatetimeDaysInMonthC,
    ProvenDatetimeDaysInMonthDart>('proven_datetime_days_in_month');

// --- SafeCurrency ---
final provenCurrencyParse =
    provenLib.lookupFunction<ProvenCurrencyParseC, ProvenCurrencyParseDart>(
        'proven_currency_parse');
